--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /COURSE_MATERIALS/visualization/example/010_example.md~
 /COURSE_MATERIALS/visualization/slides/.Rhistory
 /COURSE_MATERIALS/visualization/example/020_example.md~
+*.DS_Store
